--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
     <div class="container">
       <h1>Lista de Tarefas</h1>
-      <p>Adicione suas tarefas!</p>
+      <p class="indica">Adiciona as tuas tarefas!</p>
       <input type="text" id="inputTarefa" placeholder="Digite sua tarefa" />
       <ul id="lista-tarefas"></ul>
       <button onclick="adicionarTarefa()">Adicionar Tarefa</button>
-      <button onclick="limparTarefas()"class="botao_lista">Apagar Tudo</button>
-      <p id="mensagem"></p>
+      <button onclick="limparTarefas()" class="botao_lista">Apagar Tudo</button>
+      <p class="mensagem" id="mensagem"></p>
+
       <ul id="listaTarefas"></ul>
     </div>
 
