--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Lista de Tarefas</h1>
       <p class="indica">Adiciona as tuas tarefas!</p>
-      <input type="text" id="inputTarefa" placeholder="Digite sua tarefa" />
+      <input type="text" id="inputTarefa" placeholder="Escreve uma tarefa" />
       <ul id="lista-tarefas"></ul>
       <button onclick="adicionarTarefa()">Adicionar Tarefa</button>
       <button onclick="limparTarefas()" class="botao_lista">Apagar Tudo</button>
